Add final touches to the styling

--- a/src/components/Greetings.css
+++ b/src/components/Greetings.css
@@ -12,7 +12,7 @@
   width: 150px;
   height: 40px;
   border-radius: 10px;
-  background-color: #ff5151;
+  background-color: hsl(197, 100%, 66%);
   color: white;
   font-size: 1rem;
   border: none;
