--- a/src/components/Greetings.css
+++ b/src/components/Greetings.css
@@ -19,13 +19,46 @@
   cursor: pointer;
 }
 
-@keyframes bounce {
+@keyframes bounceRight {
   0% { transform: translateX(100%); }
   60% { transform: translateX(-10%); }
   80% { transform: translateX(5%); }
   100% { transform: translateX(0); }
 }
 
-.bounce {
-  animation: bounce 1s;
+@keyframes bounceLeft {
+  0% { transform: translateX(-100%); }
+  60% { transform: translateX(10%); }
+  80% { transform: translateX(-5%); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes bounceTop {
+  0% { transform: translateY(-100%); }
+  60% { transform: translateY(10%); }
+  80% { transform: translateY(-5%); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes bounceBottom {
+  0% { transform: translateY(100%); }
+  60% { transform: translateY(-10%); }
+  80% { transform: translateY(5%); }
+  100% { transform: translateY(0); }
+}
+
+.bounceRight {
+  animation: bounceRight 1s;
+}
+
+.bounceLeft {
+  animation: bounceLeft 1s;
+}
+
+.bounceTop {
+  animation: bounceTop 1s;
+}
+
+.bounceBottom {
+  animation: bounceBottom 1s;
 }
